Avoid getting scrollbar on form area and let the tree handles it

--- a/mail/templates/default/app.css
+++ b/mail/templates/default/app.css
@@ -892,3 +892,7 @@ div.mailComposeHeaderSection>table {
 	width:100%;
 	height:100%;
 }
+/*Avoid getting scrollbar on form area, let scrolling be handled by tree*/
+#mail-subscribe {
+	overflow: hidden;
+}
